apps/staging/pe-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pe-site
  namespace: pe-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pe-site
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pe-site
    spec:
      containers:
        - name: pe-site
          image: r2-registry-production.mbenedettini-cloudflare.workers.dev/pe-site:8c985e21
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
      imagePullSecrets:
        - name: cloudflare-private-registry
