apps/staging/pe-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pe-site
  labels:
    app.kubernetes.io/name: pe-site
spec:
  selector:
    app.kubernetes.io/name: pe-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
