apps/staging/pe-site/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: pe-site
  namespace: pe-site
spec:
  gateways:
  - istio-ingress/istio-gw
  hosts:
  - platformengineering.works
  - www.platformengineering.works
  http:
  - match:
    - authority:
        exact: www.platformengineering.works
    redirect:
      authority: platformengineering.works
  - route:
    - destination:
        host: pe-site.pe-site.svc.cluster.local
        port:
          number: 80
